# news-broadcast-pipeline

./: .gitignore  CLAUDE.md  FRAMEWORK_README.md  README.md  pipeline.json
.claude/: workflow-config.json
aesthetic-reviewer/: .gitignore  CLAUDE.md
aesthetic-reviewer/output/: review-report-story-0-round2.md  review-report-story-0-round3.md  review-report-story-0.md  review-report.md  story-0-raw-v2.txt  story-0-raw-v3.txt  story-0-raw-v4.txt  story-0-raw-v5.txt  story-0-raw.txt  story-0-vision-v2.json  story-0-vision-v3.json  story-0-vision-v4.json  story-0-vision-v5.json
aesthetic-reviewer/scripts/: .env.example  analyze_video.py  requirements.txt
agent5-video-assembler/: CLAUDE.md
agent5-video-assembler/output/: assembly-report.json
agent5-video-assembler/scripts/: assemble_broadcast.py
agent6-final-review/: CLAUDE.md
agent6-final-review/output/: final-review-report.md  final-review.json
agent6-final-review/scripts/: final_review.py
broadcast-engine/: CLAUDE.md  pyproject.toml  start.bat
broadcast-engine/.claude/skills/tech-news-banger/: SKILL.md
broadcast-engine/.claude/skills/tech-news-banger/references/: style-guide.md
broadcast-engine/output/: manifest.json
broadcast-engine/output/voiceover/: voiceover-map.json
broadcast-engine/src/: cli.py  generator.py  models.py  prompts.py
remotion-product/: CLAUDE.md  package-lock.json  package.json  review-report.md  tsconfig.json
remotion-product/composite-script/: CompositeBroadcast.tsx  (+1 more)
scripts/: data-bridge.py  generate_voiceover.py  orchestrator.sh
video-assembler/: CLAUDE.md
(+49 files in other folders)
