[project]
name = "broadcast-engine"
version = "0.1.0"
description = "Generate casual broadcast scripts from Horizon enriched news data"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
]

[project.scripts]
broadcast = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
